--- a/assignment/1주차 과정.md
+++ b/assignment/1주차 과정.md
@@ -2,3 +2,22 @@
 
 - 진행 기간 : 2020. 10. 12(Mon) ~ 10. 18(Sun)
 - 진행 내용 : 오리엔테이션
+
+<hr>
+
+## Example Screen
+<img width = "200" src = "https://user-images.githubusercontent.com/55150540/95723758-73b5be00-0cb0-11eb-9a19-f18c8ab50a89.gif">
+
+<hr>
+
+## Assignment
+- 화면전환 : Navigator.pushReplacementNamed를 사용하여 Named route로 2초 뒤에 화면이 전환됩니다. 
+   + Navigator.pushNamed와 차이점이 무엇인지 파악해보세요.
+- 버튼 :  RaisedButton을 사용해 숫자를 더하고 뺄 수 있습니다. 
+- AppBar : "Flutter Tutorial" 텍스트를 입력하여 center에 위치하도록 변경하세요.
+- 버튼 및 텍스트에 적용된 스타일도 같이 적용해보세요.
+- 프로젝트명은 자유롭게 작성해도 좋지만 일관성 있게 작성하여 업로드 해주세요 :)
+
+
+
+
