--- a/assignment/1주차 과정.md
+++ b/assignment/1주차 과정.md
@@ -5,12 +5,12 @@
 
 <hr>
 
-## Example Screen
+## :iphone: Example Screen
 <img width = "200" src = "https://user-images.githubusercontent.com/55150540/95723758-73b5be00-0cb0-11eb-9a19-f18c8ab50a89.gif">
 
 <hr>
 
-## Assignment
+## :clipboard: Assignment
 - 화면전환 : Navigator.pushReplacementNamed를 사용하여 Named route로 2초 뒤에 화면이 전환됩니다. 
    + Navigator.pushNamed와 차이점이 무엇인지 파악해보세요.
 - 버튼 :  RaisedButton을 사용해 숫자를 더하고 뺄 수 있습니다. 
