--- a/assignment/2주차 과정.md
+++ b/assignment/2주차 과정.md
@@ -8,7 +8,7 @@
 
 
 ## :iphone: Example Screen
-<img width = "200" src = "https://user-images.githubusercontent.com/55150540/96370587-534a9f80-1199-11eb-8ddc-d093485488ea.png">
+<img width = "200" src = "https://user-images.githubusercontent.com/55150540/96371048-e801cd00-119a-11eb-92be-dbf200bc60b6.gif">
 
 <br>
 
