Update 7주차 ~ 12주차.md

--- a/assignment/7주차 ~ 12주차.md
+++ b/assignment/7주차 ~ 12주차.md
@@ -1,6 +1,6 @@
 # :clock12: 7주차 ~ 12주차 과정
 
-- 진행 기간 : 2020. 11.23(Mon) ~ 12. 31(Sun)
+- 진행 기간 : 2020. 11. 23(Mon) ~ 12. 31(Sun)
 - 진행 내용 : 프로젝트 진행
 
 <br>
